examples/BAD/BAD_050_CONSISTENCY_5/main.nut

Data File :=
    - string: filePath
    - bool: isDirectory = "no"

@ File {
    filePath = "./main.nut"
    isDirectory = true
}
